Update azure-pipelines.yml for Azure Pipelines
#15

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,9 @@ steps:
   displayName: 'Move .env file'
 
 - script: |
+    cat .env
+
+- script: |
     npm install
     npm run build
     ls -ltrh dist
