--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
