--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@chakra-ui/avatar": "^2.3.0",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.4",
+    "@types/react-toastify": "^4.0.2",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.4",
     "zustand": "^5.0.3"
   },
