--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
     "format": "prettier --write src/",
     "prepare": "husky",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest --watch",
+    "coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@chakra-ui/avatar": "^2.3.0",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react-toastify": "^4.0.2",
     "axios": "^1.7.9",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.1.5",
     "react-toastify": "^11.0.5",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^4.0.4",
     "zustand": "^5.0.3"
   },
@@ -35,6 +41,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.5",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
